[gd_scene load_steps=12 format=3 uid="uid://cccgyb8yxgaiv"]

[ext_resource type="Script" path="res://CutSences/IntroScene/intro_scene.gd" id="1_ofrh0"]
[ext_resource type="FontFile" uid="uid://cmiys05oiioml" path="res://Fonts/Retro Gaming.ttf" id="2_7wlu4"]
[ext_resource type="AudioStream" uid="uid://c8pvkt20tlrdx" path="res://Audio/Music-stop.mp3" id="3_dx886"]
[ext_resource type="AudioStream" uid="uid://xtsolad6ldps" path="res://Audio/epic-background-orchestral-music-heroes-of-the-ages-247228 (mp3cut.net).mp3" id="3_rhgj0"]
[ext_resource type="PackedScene" uid="uid://d3pg4x76ml81q" path="res://Components/Transition_Manager/transition_manager.tscn" id="5_4ieqk"]

[sub_resource type="LabelSettings" id="LabelSettings_qmcl7"]
font = ExtResource("2_7wlu4")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_04u8e"]
font = ExtResource("2_7wlu4")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_7w6it"]
font = ExtResource("2_7wlu4")
font_size = 14

[sub_resource type="Animation" id="Animation_oob1g"]
resource_name = "IntroScene"
length = 120.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 7, 19, 27, 29, 37, 47, 56, 64, 80),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["In a world teetering on the edge of the unknown,
two heros set forth, bound by a single purpose…", "In a world teetering on the edge of the unknown,
two heros set forth, bound by a single purpose…", "
", "Together, they venture into the depths,
prepared for whatever dangers may await.", "", "A tale of bravery, mystery, and perhaps a bit of luck…
two souls venturing where others dared not tread.", "", "???—the stoic, ever-ready warrior with 
nerves of steel…
???—the Mavric, with eyes sharp and a 
mind even sharper.", "
", "Brave beyond compare and with undeniable charm.
Bold-hearted and, naturally, impossibly 
handsome and sexy", "GUIDO"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 6.99, 7, 19, 21, 26, 27, 29, 31, 36.99, 37, 47, 49, 55.99, 56, 64, 66, 71.99, 72, 80, 92),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(7, 37, 56),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainMusic:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 7, 19, 37, 46, 56, 64, 72, 80, 113),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(8, 38, 56, 76, 111),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [["Well… calling them heroes would be quite a stretch.", "Let’s just call them… ahhhh… 'nice' guys.", "Oh yes, that sounds quite good. Let’s continue."]],
"method": &"StartDialogueCutScene"
}, {
"args": [["Or, as some might say, two well-meaning fools stumbling in the dark.", "But let’s be fair—they did try their best."]],
"method": &"StartDialogueCutScene"
}, {
"args": [["Or at least, that’s how they’d describe themselves.", "Some might say they were… easily distracted."]],
"method": &"StartDialogueCutScene"
}, {
"args": [["I can't even… what kind of narcissistic person would write that shit about themselves?"]],
"method": &"StartDialogueCutScene"
}, {
"args": [],
"method": &"changeScene"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/CanvasLayer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(80),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/Label:label_settings:font_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(80),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [52]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Camera2D:zoom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(80, 103),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MainMusic:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 105, 111),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -60.0]
}

[sub_resource type="Animation" id="Animation_86c1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainSfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainMusic:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/CanvasLayer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Label:label_settings:font_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Camera2D:zoom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MainMusic:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5mbsi"]
_data = {
"IntroScene": SubResource("Animation_oob1g"),
"RESET": SubResource("Animation_86c1q")
}

[node name="IntroScene" type="Node2D"]
position = Vector2(322, 182)
script = ExtResource("1_ofrh0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -17.5
offset_right = 253.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_qmcl7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
visible = false

[node name="nameCon" type="ColorRect" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_top = 0.583333
anchor_right = 0.223438
anchor_bottom = 0.663333
offset_top = 10.0
offset_bottom = 9.2
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 0.882353)
metadata/_edit_use_anchors_ = true

[node name="nameLabel" type="Label" parent="Control/CanvasLayer/nameCon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.041958
anchor_top = 0.0892857
anchor_right = 0.608392
anchor_bottom = 0.910714
text = "Narrator"
label_settings = SubResource("LabelSettings_04u8e")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="dialogueCon" type="ColorRect" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.0015625
anchor_top = 0.680556
anchor_right = 1.00156
anchor_bottom = 0.995222
offset_left = -1.0
offset_top = 2.99998
offset_right = -1.0
offset_bottom = 4.72
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 0.882353)
metadata/_edit_use_anchors_ = true

[node name="dialogueLabel" type="Label" parent="Control/CanvasLayer/dialogueCon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.01709)
label_settings = SubResource("LabelSettings_7w6it")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Control/CanvasLayer"]
wait_time = 2.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5mbsi")
}
autoplay = "IntroScene"

[node name="MainMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rhgj0")

[node name="MainSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dx886")
volume_db = -10.0

[node name="TransitionManager" parent="." instance=ExtResource("5_4ieqk")]
